# VerletSimulation

./: CMakeLists.txt
src/: config.hpp  main.cpp  renderer.hpp
src/rng/: rng.cpp  rng.hpp
src/sim/: solver.cpp  solverutils.cpp
src/sim/headers/: solver.hpp  verletobject.hpp
